# graduate_work

./: .env.example  .env.sample  .gitignore  Dockerfile-admin-panel  Dockerfile-auth  Dockerfile-billing-api  Dockerfile-scheduler  Dockerfile-sqlite-to-postgres  Makefile  README.md  docker-compose.yaml  docker-compose.yml  setup.cfg
.github/: pr.yml
.github/workflows/: pr.yml
admin_panel/billing/: admin.py  apps.py  models.py
admin_panel/config/: asgi.py  urls.py  wsgi.py
admin_panel/movies/: admin.py  apps.py  models.py
admin_pannel/: .env.example  Dockerfile  pyproject.toml  requirements.txt
admin_pannel/admin_pannel/: celery.py  settings.py  urls.py
admin_pannel/movies/: admin.py  models.py  proxy_models.py
admin_pannel/movies/api/v1/: urls.py  views.py
admin_pannel/movies/migrations/: 0001_initial.py  0002_auto_20201016_0648.py
admin_pannel/scripts/: celery_beat_start.sh  celery_worker_start.sh  django-entrypoint.sh
admin_pannel/subscriptions/: admin.py  models.py
admin_pannel/subscriptions/erm_diagram/: subscription.uml
admin_pannel/subscriptions/migrations/: 0001_initial.py
architecture/: billing.txt
auth/: main.py
auth/api/: __init__.py
auth/core/: api.py  (+3 more)
billing_api/: main.py
db/: init.sql
requirements/: admin-panel.txt  auth.txt  billing-api.txt  ci.txt  scheduler.txt
scheduler/: main.py  settings.py
sqlite_to_postgres/: Dockerfile  autor_database_schema.sql  data_structures.py  db.sqlite  extract_data_from_sqlite.py  load_data.py  load_data_to_postgres.py  main.py  my_dataclasses.py  requirements.txt  settings.py
(+55 files in other folders)
