[tool.poetry]
name = "admin_pannel"
version = "0.1.0"
description = ""
authors = ["Ilya Kochankov <ikochankov@voctiv.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-environ = "^0.4.5"
psycopg2 = "2.9.1"
gunicorn = "^20.1.0"
django-extensions = "^3.1.3"
pyparsing = "^2.4.7"
pydotplus = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
